--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
@@ -39,9 +37,8 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
-    environment:
-      - KAFKA_BROKER=kafka:9092
-      - KAFKA_TOPIC=AAPL_ORDER
+    env_file:
+      - cmd/api/order/.env.example
     networks:
       - app-network
 
