feat: update to go 1.23.5 & set up matching worker & e2e test (still in progress)

--- a/cmd/worker/matching_engine/.env.example
+++ b/cmd/worker/matching_engine/.env.example
@@ -1,5 +1,7 @@
 APP_NAME=order
 APP_PORT=:8080
+APP_SYMBOL=AAPL
+APP_ORDER_TOPIC=AAPL_ORDER
+APP_MATCHING_TOPIC=AAPL_MATCHING
 
 KAFKA_BROKERS=kafka:9092
-KAFKA_TOPIC=AAPL_ORDER
